feat: [채팅 클라이언트] - 사용자 등록, 삭제, 로그인, 로그아웃, 세션 연장 기능 추가
채팅 클라이언트와 MySQL workbenck, redis insight로 사용자 인증 기능 동작 확인

[채팅 클라이언트 실행 방법]
```
 ./build/install/preview_message_client/bin/preview_message_client
```
회원가입: /register user1 pass1
로그인: /login user1 pass1
탈퇴: /unregister